Fixing up spacing and adding email

--- a/src/styles/components/Homepage.less
+++ b/src/styles/components/Homepage.less
@@ -1,5 +1,5 @@
 #homepage-component {
   .content-column({
-    margin: 40px auto 0;
+    margin: 93px auto 0;
   });
 }
