--- a/src/styles/containers/HomepageContainer.less
+++ b/src/styles/containers/HomepageContainer.less
@@ -1,3 +1,3 @@
 .homepage-section {
-  margin-bottom: 96px;
+  margin-bottom: 93px;
 }
